# Fijazo-API

./: .env.example  .gitignore  Dockerfile  FRONTEND_API_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
src/fijazo_api/: main.py
src/fijazo_api/api/: deps.py
src/fijazo_api/api/routers/: achievements.py  auth.py  bets.py  ranking.py  ranks.py  statistics.py  users.py
src/fijazo_api/api/schemas/: achievements.py  auth.py  bet.py  imports.py  ranking.py  ranks.py  statistics.py  user.py
src/fijazo_api/application/: ports.py
src/fijazo_api/application/services/: auth_service.py  bet_import_service.py  bet_service.py  progression_service.py  ranking_service.py  statistics_service.py  user_service.py
src/fijazo_api/core/: config.py  exceptions.py  security.py
src/fijazo_api/domain/entities/: achievement.py  bet.py  progression.py  rank.py  statistics.py  user.py
src/fijazo_api/domain/repositories/: bet_repository.py  progression_repository.py  statistics_repository.py  user_repository.py
src/fijazo_api/domain/services/: achievement_evaluator.py  achievements_catalog.py  rank_evaluator.py  rank_scorer.py  ranking_scorer.py  ranks_config.py  statistics_calculator.py
src/fijazo_api/infrastructure/: seed.py
src/fijazo_api/infrastructure/database/: mongo.py
src/fijazo_api/infrastructure/excel/: __init__.py  columns.py  (+2 more)
tests/: conftest.py  test_achievement_evaluator.py  test_admin_users.py  test_auth.py  test_bet_import.py  test_bets.py  test_parlay.py  test_progression_api.py  test_ranks.py  test_statistics_api.py  test_statistics_calculator.py
(+4 files in other folders)
