[project]
name = "fijazo-api"
version = "0.1.0"
description = ""
authors = [
    {name = "gomiiDev",email = "carlosha176@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pymongo (>=4.9,<5.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "pyjwt (>=2.10.0,<3.0.0)",
    "bcrypt (>=4.2.0,<5.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)"
]

[tool.poetry]
packages = [{include = "fijazo_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.21,<0.16.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.black]
line-length = 100
